--- a/style.css
+++ b/style.css
@@ -98,8 +98,8 @@ p {
   font-family: 'Zeyada', cursive;
   font-size: 3vw;
   color: rgb(0, 0, 100);
-  font-weight: bold;
-  opacity: 0.75;
+  font-weight: bolder;
+  opacity: 0.90;
   user-select: none;
   line-height: 1.4;
   /* Filter untuk drop shadow, jika dibutuhkan */
